...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.MainActivity">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etSearch"
        android:layout_width="@dimen/dp_0"
        android:layout_height="@dimen/dp_46"
        android:layout_margin="@dimen/dp_15"
        android:background="@drawable/shape_search_bg"
        android:drawableStart="@drawable/ic_baseline_search_24"
        android:hint="@string/search_user"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etSearch">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvUsers"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/grey_light" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <ProgressBar
...
