<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_main"
    app:startDestination="@id/userFragment">

    <fragment
        android:id="@+id/userFragment"
        android:name="com.gituser.paging.view.users.fragments.UserFragment"
        android:label="fragment_gif"
        tools:layout="@layout/fragment_user" />

    <fragment
        android:id="@+id/userDetailsFragment"
        android:name="com.gituser.paging.view.users.fragments.UserDetailsFragment"
        android:label="fragment_gif_details"
        tools:layout="@layout/fragment_user_details" />

    <fragment
        android:id="@+id/favUserFragment"
        android:name="com.gituser.paging.view.users.fragments.FavouriteUsersFragment"
        android:label="fragment_fav_users"
        tools:layout="@layout/fragment_favourite_user" />

</navigation>
